<resources>
    <string name="app_name">Calorie Tracker</string>
    <string name="google_API_key">AIzaSyDuoGbGnxys37TN63m9jKYpUE3iBlbTZQI</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="not_signup">Not Signup?</string>
    <string name="signUp">SIGN UP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_registered">Already Registered</string>
    <string name="firstname">first name</string>
    <string name="surname">surname</string>
    <string name="email">email</string>
    <string name="height">height</string>
    <string name="weight">weight</string>
    <string name="address">address</string>
    <string name="postcode">postcode</string>
    <string name="steps_per_mile">Steps per mile</string>
    <string name="level_of_activity">Level Of Activity</string>
    <string name="gender">Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="dob">Date Of Birth</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
