<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <!--android:background="@drawable/img_background">-->

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="127dp"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/tv_firstname"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/firstname"
            android:textSize="15sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/et_firstname"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:paddingLeft="2dp" />

        <TextView
            android:id="@+id/tv_surname"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/surname"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_surname"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:paddingLeft="2dp" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/email"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:paddingLeft="2dp" />

        <TextView
            android:id="@+id/tv_height"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/height"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_height"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:paddingLeft="2dp" />

        <TextView
            android:id="@+id/tv_weight"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/weight"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_weight"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:paddingLeft="2dp" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/address"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:paddingLeft="2dp" />

        <TextView
            android:id="@+id/tv_postcode"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/postcode"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_postcode"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:paddingLeft="2dp" />

        <TextView
            android:id="@+id/tv_steps_per_mile"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/steps_per_mile"
            android:textSize="15sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/et_steps_per_mile"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:paddingLeft="2dp" />

        <TextView
            android:id="@+id/tv_gender"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/gender"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radioGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="206dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:checked="true"
                android:padding="10dp"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="206dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:text="@string/female" />

        </RadioGroup>


        <TextView
            android:id="@+id/tv_dob"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/dob"
            android:textSize="15sp"
            android:textStyle="bold" />

        <DatePicker
            android:id="@+id/dp_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:endYear="2019"
            android:startYear="1900"></DatePicker>

        <TextView
            android:id="@+id/tv_level_of_activity"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/level_of_activity"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_level_of_activity"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:entries="@array/level_of_activity"
            android:paddingLeft="2dp"
            android:prompt="@string/steps_per_mile" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/username"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/username"
            android:paddingLeft="2dp" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/password"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/password" />

        <TextView
            android:id="@+id/tv_cnf_password"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/confirm_password"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_cnf_password"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/password" />



        <Button
            android:id="@+id/button_register"
            android:layout_width="206dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#C0C0C0"
            android:text="@string/signUp"
            android:textColor="#ffffff"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/already_registered"
                android:textColor="#ff0000" />

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:paddingLeft="10dp"
                android:text="@string/login"
                android:textColor="#C0C0C0"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>